--- a/exampleSite/data/en/feature.yml
+++ b/exampleSite/data/en/feature.yml
@@ -1,27 +1,27 @@
 ############################# feature ###################################
 feature:
   enable : true
-  image : images/about/about-business-man.jpg
-  image_webp : images/about/about-business-man.webp
-  title : We’re A Digital Design Agency.
-  content : "Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam tempora itaque, autem dolores culpa cum mollitia voluptate nesciunt voluptatibus quasi."
-  feature_item : 
+  image : images/dashboard.gif
+  image_webp : images/dashboard.gif
+  title : Ergonomic interface
+  content : "The easiest way to make a gaming server"
+  feature_item :
       # feature item loop
-    - title : SEO Optimized
+    - title : World Coverage
       icon : ti-world # themify icon pack : https://themify.me/themify-icons
-      content : Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus consectetur dolores repellendus eos saepe
-      
+      content : You can play from anywhere in the world.
+
       # feature item loop
     - title : Easy Customization
       icon : ti-panel # themify icon pack : https://themify.me/themify-icons
-      content : Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus consectetur dolores repellendus eos saepe
+      content : Just get the package who suits you best.
 
       # feature item loop
-    - title : SEO Optimized
+    - title : An ever growing community
       icon : ti-stats-up # themify icon pack : https://themify.me/themify-icons
-      content : Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus consectetur dolores repellendus eos saepe
-      
+      content : Join a community of 1000 players
+
       # feature item loop
-    - title : Easy Customization
+    - title : Get your voice heard
       icon : ti-announcement # themify icon pack : https://themify.me/themify-icons
-      content : Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus consectetur dolores repellendus eos saepe
+      content : Join our discord server and share your idea with the team or other players and together we can change the way we play games.
