--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -1,71 +1,18 @@
-baseURL = "https://technoservs-vitrine.netlify.app"
-disableLanguages = []
-disqusShortname = ""
-paginate = "6"
-summaryLength = "15"
+################################# Default configuration ###################
+baseURL = "https://examplesite.com"
+title = "TechnoServs"
 theme = "meghna-hugo"
-title = "Meghna"
-[Languages.en]
-contentDir = "content/english"
-copyright = "Copyright &copy; 2020 Designed by [Themefisher](https://themefisher.com) & Developed by [Gethugothemes](https://gethugothemes.com)"
-home = "Home"
-languageCode = "en-us"
-languageName = "En"
-weight = 1
-[Languages.fr]
-contentDir = "content/french"
-copyright = "Copyright &copy; 2020 Designed by [Themefisher](https://themefisher.com) & Developed by [Gethugothemes](https://gethugothemes.com)"
-home = "Accueil"
-languageCode = "fr-fr"
-languageName = "Fr"
-weight = 2
-[[menu.main]]
-URL = "about"
-name = "about"
-weight = 1
-[[menu.main]]
-URL = "services"
-name = "services"
-weight = 2
-[[menu.main]]
-URL = "portfolio"
-name = "portfolio"
-weight = 3
-[[menu.main]]
-URL = "team"
-name = "team"
-weight = 4
-[[menu.main]]
-URL = "pricing"
-name = "pricing"
-weight = 5
-[[menu.main]]
-URL = "blog"
-name = "blog"
-weight = 6
-[[menu.main]]
-URL = "contact"
-name = "contact"
-weight = 7
-[[menu.static]]
-URL = "https://themefisher.com/"
-name = "themefisher"
-weight = 8
-[params]
-author = "Themefisher"
-description = "Responsive Multipurpose Parallax HTML5 Template"
-google_analytics_id = ""
-logo = "images/logo.png"
-post_share = true
-[params.cookies]
-enable = true
-expire_days = 2
-[params.map]
-enable = true
-gmap_api = "https://maps.googleapis.com/maps/api/js?key=AIzaSyBu5nZKbeK-WHQ70oqOWo-_4VmwOwKP9YQ"
-map_latitude = "51.5223477"
-map_longitude = "-0.1622023"
-map_marker = "images/marker.png"
+# post pagination
+paginate = "6"
+# post excerpt
+summaryLength = "15"
+# disqus short name
+disqusShortname = "" # get your shortname form here : https://disqus.com
+# disable language
+disableLanguages = []
+
+############################# Plugins ##########################
+# css plugins
 [[params.plugins.css]]
 link = "plugins/bootstrap/bootstrap.min.css"
 [[params.plugins.css]]
@@ -76,6 +23,8 @@ link = "plugins/magnific-popup/magnific-popup.css"
 link = "plugins/slick/slick.css"
 [[params.plugins.css]]
 link = "https://fonts.googleapis.com/css?family=Anaheim|Quattrocento+Sans:400,700&display=swap"
+
+# js plugins
 [[params.plugins.js]]
 link = "plugins/jquery/jquery.min.js"
 [[params.plugins.js]]
@@ -90,24 +39,118 @@ link = "plugins/magnific-popup/jquery.magnific-popup.min.js"
 link = "plugins/lazy-load/lozad.min.js"
 [[params.plugins.js]]
 link = "plugins/google-map/map.js"
+
+############################# Navigation ##################################
+[[menu.main]]
+name = "about"
+URL = "about"
+weight = 1
+
+##[[menu.main]]
+##name = "services"
+##URL = "services"
+##weight = 2
+
+[[menu.main]]
+name = "services"
+URL = "portfolio"
+weight = 3
+
+[[menu.main]]
+name = "team"
+URL = "team"
+weight = 4
+
+[[menu.main]]
+name = "pricing"
+URL = "pricing"
+weight = 5
+
+[[menu.main]]
+name = "ok"
+URL = "blog"
+weight = 7
+
+[[menu.main]]
+name = "contact"
+URL = "contact"
+weight = 6
+
+#### external / static link ####
+##[[menu.static]]
+##name = "themefisher"
+##URL = "https://themefisher.com/"
+##weight = 8
+
+############################# Default Parameters ##########################
+[params]
+logo = "images/ts-logo-full.svg"
+# Meta data
+description = "Responsive Multipurpose Parallax HTML5 Template"
+author = "Themefisher"
+# Google Analytics
+google_analytics_id = "" # Your ID
+# post share
+post_share = true
+
+# preloader
 [params.preloader]
 enable = true
-preloader = "images/logo.png"
+preloader = "images/ts-logo-small.svg"
+
+# cookies
+[params.cookies]
+enable = true
+expire_days = 2
+
+# google map
+[params.map]
+enable = true
+gmap_api = "https://maps.googleapis.com/maps/api/js?key=AIzaSyBu5nZKbeK-WHQ70oqOWo-_4VmwOwKP9YQ"
+map_latitude = "51.5223477"
+map_longitude = "-0.1622023"
+map_marker = "images/marker.png"
+
+############################# social icons ##########################
 [[params.social]]
-icon = "ti-facebook"
+icon = "ti-facebook" # themify icon pack : https://themify.me/themify-icons
 link = "#"
+
 [[params.social]]
-icon = "ti-twitter-alt"
+icon = "ti-twitter-alt" # themify icon pack : https://themify.me/themify-icons
 link = "#"
+
 [[params.social]]
-icon = "ti-youtube"
+icon = "ti-youtube" # themify icon pack : https://themify.me/themify-icons
 link = "#"
+
 [[params.social]]
-icon = "ti-linkedin"
+icon = "ti-linkedin" # themify icon pack : https://themify.me/themify-icons
 link = "#"
+
 [[params.social]]
-icon = "ti-dribbble"
+icon = "ti-dribbble" # themify icon pack : https://themify.me/themify-icons
 link = "#"
+
 [[params.social]]
-icon = "ti-pinterest"
+icon = "ti-pinterest" # themify icon pack : https://themify.me/themify-icons
 link = "#"
+
+
+################################ English Language ########################
+[Languages.en]
+languageName = "En"
+languageCode = "en-us"
+contentDir = "content/english"
+weight = 1
+home = "Home"
+copyright = "Copyright &copy; 2020 Designed by [Themefisher](https://themefisher.com) & Developed by [Gethugothemes](https://gethugothemes.com)"
+
+################################ France Language ########################
+##[Languages.fr]
+##languageName = "Fr"
+##languageCode = "fr-fr"
+##contentDir = "content/french"
+##weight = 2
+##home = "Accueil"
+##copyright = "Copyright &copy; 2020 Designed by [Themefisher](https://themefisher.com) & Developed by [Gethugothemes](https://gethugothemes.com)"
