--- a/exampleSite/data/en/banner.yml
+++ b/exampleSite/data/en/banner.yml
@@ -1,12 +1,12 @@
 ############################### Banner ################################
 banner:
   enable : true
-  bg_image_webp : "images/backgrounds/hero-area.webp"
-  bg_image : "images/backgrounds/hero-area.jpg"
+  bg_image_webp : "https://vonguru.fr/wp-content/uploads/2020/06/gaming.jpg"
+  bg_image : "https://vonguru.fr/wp-content/uploads/2020/06/gaming.jpg"
   icon : "" # themify icon pack : https://themify.me/themify-icons
   title : "Experience the new reality"
-  content : "Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, excepturi. At recusandae sit perferendis autem,iste tempora nostrum numquam sapiente!"
+  content : "Want to have a custom made ready to use gaming server in 5 minutes ?"
   button:
     enable : true
-    label : "Explore Us"
-    link : "#services"
+    label : "For sure"
+    URL : "https://technoservs.ichbinkour.eu"
