--- a/exampleSite/data/en/funfacts.yml
+++ b/exampleSite/data/en/funfacts.yml
@@ -1,25 +1,20 @@
 ################################# funfacts ##################################
 funfacts:
   enable : true
-  bg_image : "images/backgrounds/bg-white-wall.jpg"
-  bg_image_webp : "images/backgrounds/bg-white-wall.webp"
+  bg_image : "images/backgrounds/bg.png"
+  bg_image_webp : "images/backgrounds/bg.png"
   counter_item:
     # counter item loop
-    - title : "Happy Clients"
-      icon : "ti-face-smile" # themify icon pack : https://themify.me/themify-icons
-      count : "320"
-    
+    - title : "active player"
+      icon : "ti-world" # themify icon pack : https://themify.me/themify-icons
+      count : "25"
+
     # counter item loop
-    - title : "Projects completed"
-      icon : "ti-archive" # themify icon pack : https://themify.me/themify-icons
-      count : "350"
-    
+    - title : "Server Online"
+      icon : "ti-server" # themify icon pack : https://themify.me/themify-icons
+      count : "15"
+
     # counter item loop
     - title : "Positive feedback"
       icon : "ti-thumb-up" # themify icon pack : https://themify.me/themify-icons
       count : "158"
-    
-    # counter item loop
-    - title : "Cups of Coffee"
-      icon : "ti-gift" # themify icon pack : https://themify.me/themify-icons
-      count : "250"
