--- a/exampleSite/data/en/team.yml
+++ b/exampleSite/data/en/team.yml
@@ -4,65 +4,44 @@ team:
   title : Our Team
   team_member :
     # team member loop
-    - name : Abul Mal Muhit
+    - name : Jonathan Frickert
       image_webp : images/team/team-1.webp
       image : images/team/team-1.jpg
-      designation : CEO/Founder
+      designation : Back-end Developer
       content : Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur necessitatibus ullam, culpa odio.
-      social :
-        - icon : ti-facebook # themify icon pack : https://themify.me/themify-icons
-          link : "#"
-        - icon : ti-twitter-alt # themify icon pack : https://themify.me/themify-icons
-          link : "#"
-        - icon : ti-linkedin # themify icon pack : https://themify.me/themify-icons
-          link : "#"
-        - icon : ti-dribbble # themify icon pack : https://themify.me/themify-icons
-          link : "#"
-        
+
     # team member loop
-    - name : Frank Miller
+    - name : Valentin Ichkour
       image_webp : images/team/team-2.webp
       image : images/team/team-2.jpg
-      designation : Manager
+      designation : Front-end Developer
       content : Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur necessitatibus ullam, culpa odio.
-      social :
-        - icon : ti-facebook # themify icon pack : https://themify.me/themify-icons
-          link : "#"
-        - icon : ti-twitter-alt # themify icon pack : https://themify.me/themify-icons
-          link : "#"
-        - icon : ti-linkedin # themify icon pack : https://themify.me/themify-icons
-          link : "#"
-        - icon : ti-dribbble # themify icon pack : https://themify.me/themify-icons
-          link : "#"
-        
+
     # team member loop
-    - name : Michael Jonson
+    - name : Samuel Diop
       image_webp : images/team/team-3.webp
       image : images/team/team-3.jpg
-      designation : Web Developer
+      designation : Back-end Developer
       content : Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur necessitatibus ullam, culpa odio.
-      social :
-        - icon : ti-facebook # themify icon pack : https://themify.me/themify-icons
-          link : "#"
-        - icon : ti-twitter-alt # themify icon pack : https://themify.me/themify-icons
-          link : "#"
-        - icon : ti-linkedin # themify icon pack : https://themify.me/themify-icons
-          link : "#"
-        - icon : ti-dribbble # themify icon pack : https://themify.me/themify-icons
-          link : "#"
-        
+
     # team member loop
-    - name : Mo. Kha. Alamgir
+    - name : Sullivan Verdan
       image_webp : images/team/team-4.webp
       image : images/team/team-4.jpg
-      designation : SEO Specialist
+      designation : Back-end Developer
       content : Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur necessitatibus ullam, culpa odio.
-      social :
-        - icon : ti-facebook # themify icon pack : https://themify.me/themify-icons
-          link : "#"
-        - icon : ti-twitter-alt # themify icon pack : https://themify.me/themify-icons
-          link : "#"
-        - icon : ti-linkedin # themify icon pack : https://themify.me/themify-icons
-          link : "#"
-        - icon : ti-dribbble # themify icon pack : https://themify.me/themify-icons
-          link : "#"
+
+
+    # team member loop
+    - name : Jeremie Bruhwiler
+      image_webp : images/team/team-3.webp
+      image : images/team/team-3.jpg
+      designation : Front-end Developer
+      content : Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur necessitatibus ullam, culpa odio.
+
+    # team member loop
+    - name : Auguste Ziegler
+      image_webp : images/team/team-4.webp
+      image : images/team/team-4.jpg
+      designation : Front-end Developer
+      content : Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur necessitatibus ullam, culpa odio.
