--- a/exampleSite/data/en/funfacts.yml
+++ b/exampleSite/data/en/funfacts.yml
@@ -1,8 +1,8 @@
 ################################# funfacts ##################################
 funfacts:
   enable : true
-  bg_image : "images/backgrounds/bg.png"
-  bg_image_webp : "images/backgrounds/bg.png"
+  bg_image : "images/backgrounds/bg-theme.png"
+  bg_image_webp : "images/backgrounds/bg-theme.png"
   counter_item:
     # counter item loop
     - title : "active player"
