--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -7,14 +7,14 @@ theme = "meghna-hugo"
 title = "Calcom"
 [Languages.en]
 contentDir = "content/english"
-copyright = "Copyright &copy; 2020 Designed by [Themefisher](https://themefisher.com) & Developed by [Gethugothemes](https://gethugothemes.com)"
+copyright = "Copyright &copy; 2020"
 home = "Home"
 languageCode = "en-us"
 languageName = "En"
 weight = 1
 [Languages.fr]
 contentDir = "content/french"
-copyright = "Copyright &copy; 2020 Designed by [Themefisher](https://themefisher.com) & Developed by [Gethugothemes](https://gethugothemes.com)"
+copyright = "Copyright &copy; 2020"
 home = "Accueil"
 languageCode = "fr-fr"
 languageName = "Fr"
@@ -90,16 +90,22 @@ link = "plugins/lazy-load/lozad.min.js"
 link = "plugins/google-map/map.js"
 [params.preloader]
 enable = false
-preloader = "images/logo.jpg"
+preloader = "images/logo.png"
 [[params.social]]
 icon = "ti-facebook"
-link = "https://www.facebook.com/groups/2707532549532643/?ref=share"
+link = "#"
 [[params.social]]
 icon = "ti-twitter-alt"
-link = " https://twitter.com/1919Calcutta?s=09"
+link = "#"
 [[params.social]]
 icon = "ti-youtube"
 link = "#"
 [[params.social]]
-icon = "ti-instagram"
-link = "https://www.instagram.com/invites/contact/?i=1n2k0271ntjlf&utm_content=io0z4gk"
+icon = "ti-linkedin"
+link = "#"
+[[params.social]]
+icon = "ti-dribbble"
+link = "#"
+[[params.social]]
+icon = "ti-pinterest"
+link = "#"
