added packages for netlify

--- a/netlify.toml
+++ b/netlify.toml
@@ -6,3 +6,7 @@
   HUGO_VERSION = "0.73.0"
   HUGO_THEME = "repo"
   HUGO_BASEURL = "/"
+
+[[plugins]]
+package = "netlify-plugin-hashfiles"
+package = "netlify-plugin-is-website-vulnerable"
