--- a/netlify.toml
+++ b/netlify.toml
@@ -10,5 +10,14 @@
 [[plugins]]
 package = "netlify-plugin-hashfiles"
 
+  [plugins.inputs]
+  # An array of glob patterns for pages on your site. Recursive traversal will start from these
+  entryPoints = [
+    "*.html"
+  ]
+
+  # Directory where content-addressable files are moved and immutable cache-headers are set
+  staticDir = "/static/"
+
 [[plugins]]
 package = "netlify-plugin-is-website-vulnerable"
