--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -1,6 +1,6 @@
 baseURL = "https://calcomp.netlify.app/"
 canonifyURLs = "true"
-staticURL="https://calcomp.netlify.app"
+staticAddress="https://calcomp.netlify.app"
 disableLanguages = ["Fr"]
 disqusShortname = ""
 paginate = "6"
