added designation for testimonial.yml

--- a/exampleSite/data/en/testimonial.yml
+++ b/exampleSite/data/en/testimonial.yml
@@ -5,6 +5,7 @@ testimonial:
   bg_image_webp: images/library-lights.webp
   testimonial_item:
   - name: Jonathon Andrew
+    designation: Professor
     image: images/client/client-1.jpg
     image_webp: images/client/client-1.webp
     date: Dec 26, 2018
@@ -12,6 +13,7 @@ testimonial:
       minima ex, quia error, deserunt voluptatibus repellendus? Incidunt eligendi
       aliquam repellat molestias, vel sed optio rem odit quis ratione non consequuntur!
   - name: Mark Dinn
+    designation: Professor
     image: images/client/client-2.jpg
     image_webp: images/client/client-2.webp
     date: Dec 26, 2018
@@ -19,6 +21,7 @@ testimonial:
       minima ex, quia error, deserunt voluptatibus repellendus? Incidunt eligendi
       aliquam repellat molestias, vel sed optio rem odit quis ratione non consequuntur!
   - name: Lemos Kail
+    designation: Professor
     image: images/client/client-1.jpg
     image_webp: images/client/client-1.webp
     date: Dec 26, 2018
