fixed background image fallback issue

--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -2,6 +2,7 @@
 baseURL = "https://examplesite.com"
 title = "Meghna"
 theme = "meghna-hugo"
+themesDir = "../.."
 # post pagination
 paginate = "6"
 # post excerpt
