--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -41,50 +41,100 @@ link = "plugins/lazy-load/lozad.min.js"
 [[params.plugins.js]]
 link = "plugins/google-map/map.js"
 
-############################# Navigation ##################################
-[[menu.main]]
+################### English Navigation ########################
+[[Languages.en.menu.main]]
 name = "about"
 pre = "#"
 url = "about"
 weight = 1
 
-[[menu.main]]
+[[Languages.en.menu.main]]
 name = "services"
 pre = "#"
 url = "services"
 weight = 2
 
-[[menu.main]]
+[[Languages.en.menu.main]]
 name = "portfolio"
 pre = "#"
 url = "portfolio"
 weight = 3
 
-[[menu.main]]
+[[Languages.en.menu.main]]
 name = "team"
 pre = "#"
 url = "team"
 weight = 4
 
-[[menu.main]]
+[[Languages.en.menu.main]]
 name = "pricing"
 pre = "#"
 url = "pricing"
 weight = 5
 
-[[menu.main]]
+[[Languages.en.menu.main]]
 name = "blog"
 pre = "#"
 url = "blog"
 weight = 6
 
-[[menu.main]]
+[[Languages.en.menu.main]]
 name = "contact"
 pre = "#"
 url = "contact"
 weight = 7
 
-[[menu.main]]
+[[Languages.en.menu.main]]
+name = "themefisher"
+pre = ""
+url = "https://themefisher.com/"
+weight = 8
+
+
+################### French Navigation ########################
+[[Languages.fr.menu.main]]
+name = "sur"
+pre = "#"
+url = "about"
+weight = 1
+
+[[Languages.fr.menu.main]]
+name = "un service"
+pre = "#"
+url = "services"
+weight = 2
+
+[[Languages.fr.menu.main]]
+name = "portefeuille"
+pre = "#"
+url = "portfolio"
+weight = 3
+
+[[Languages.fr.menu.main]]
+name = "équipe"
+pre = "#"
+url = "team"
+weight = 4
+
+[[Languages.fr.menu.main]]
+name = "tarification"
+pre = "#"
+url = "pricing"
+weight = 5
+
+[[Languages.fr.menu.main]]
+name = "blog"
+pre = "#"
+url = "blog"
+weight = 6
+
+[[Languages.fr.menu.main]]
+name = "contact"
+pre = "#"
+url = "contact"
+weight = 7
+
+[[Languages.fr.menu.main]]
 name = "themefisher"
 pre = ""
 url = "https://themefisher.com/"
