--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -1,7 +1,7 @@
 ################################# Default configuration ###################
 baseURL = "https://examplesite.com"
 title = "Meghna"
-theme = "meghna-hugo"
+themes = "meghna-hugo"
 themesDir = "../.."
 # post pagination
 paginate = "6"
